# UserInterface.cpp

./: CMakeLists.txt  CMakePresets.json  README.md  TEMPLATE for GUIs.h  vcpkg-configuration.json  vcpkg.json
Backends/: CMakeLists.txt
Backends/FLTK/: CMakeLists.txt
Backends/FLTK/include/UserInterface/: FLTK.h
Backends/Nana/: CMakeLists.txt
Backends/Nana/include/UserInterface/: Nana.h
Backends/Qt/: CMakeLists.txt
Backends/Qt/include/UserInterface/: Qt - v1.h  Qt.h
Backends/wxWidgets/: CMakeLists.txt
Backends/wxWidgets/include/UserInterface/: wxWidgets.h
Examples/: CMakeLists.txt
Examples/Basic/: BasicExample.cpp  CMakeLists.txt
Examples/Button/: CMakeLists.txt
Examples/Notes/: WindowExample - Qt.cpp  WindowExample - WX.cpp  WindowExample - gtkmm.cpp
Examples/Window/: CMakeLists.txt  WindowExample - FL.cpp  WindowExample - ImGUI.cpp  WindowExample - ImGui - SDL2 - OpenGL3.cpp  WindowExample - Nana.cpp  WindowExample - UserInterface.cpp  WindowExample.cpp
Libraries/: CMakeLists.txt
Libraries/Implementation/: CMakeLists.txt
Libraries/Implementation/include/: UserInterface.h
Libraries/Implementation/include/UserInterface/: Autodetect.h  DefaultImplementation.h  RegisterToolkit.h
Libraries/Interfaces/: CMakeLists.txt
Libraries/Interfaces/include/UserInterface/: Interfaces.h
__include/: UserInterface.h
__include/UserInterface/: UIApplication.h  UIManager.h  UIToolkit.h  UIWindow.h
__include/UserInterface/MISC/: Application.h  Toolkits.h  _UIManager.h
__include/UserInterface/MISC/Adapters/: Autodetect.h  FLTKAdapter.h  wxWidgetsAdapter.h
__include/UserInterface/Private/: FunctionRunner.h
cmake/: Config.cmake.in
cmake/triplets/: x64-dynamic-by-default.cmake  x86-dynamic-by-default.cmake
include/: UserInterface.h
include/UserInterface/: Application.h  Config.h  IToolkit.h  IWindow.h  Toolkits.h  Window.h
include/UserInterface/Adapters/: Autodetect.h  FLTKAdapter.h  IAdapter.h  NanaAdapter.h  wxWidgetsAdapter.h
include/UserInterface/Private/: Util.h
