project(Examples.Window)

# add_subdirectory("$ENV{GLFW_PATH}" "${CMAKE_CURRENT_BINARY_DIR}/glfw")

# find_package(FLTK CONFIG REQUIRED)
# find_package(wxWidgets CONFIG REQUIRED)
# find_package(imgui CONFIG REQUIRED)
# find_package(OpenGL REQUIRED)
# find_package(glfw3 CONFIG REQUIRED)
# find_package(unofficial-nana CONFIG REQUIRED)
add_executable(${PROJECT_NAME} WindowExample.cpp)
set_target_properties(${PROJECT_NAME} PROPERTIES WIN32_EXECUTABLE TRUE)

# target_link_libraries(${PROJECT_NAME} PRIVATE fltk fltk_gl fltk_forms)
# target_link_libraries(${PROJECT_NAME} PRIVATE wx::core wx::base)
# target_link_libraries(${PROJECT_NAME} PRIVATE imgui::imgui)
# target_link_libraries(${PROJECT_NAME} PRIVATE glfw)
# target_link_libraries(${PROJECT_NAME} PRIVATE OpenGL::GL)
# target_link_libraries(${PROJECT_NAME} PRIVATE unofficial::nana::nana)
find_package(Qt6 CONFIG REQUIRED)
find_package(Qt6Core CONFIG REQUIRED)
find_package(Qt6Widgets CONFIG REQUIRED)
target_link_libraries(${PROJECT_NAME} PRIVATE Qt::Core Qt::Widgets)
